force-app/main/default/objects/Budget_Param__c/Budget_Param__c.object-meta.xml
<CustomObject>
    <label>נתון לתקציב</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>נתון לתקציב</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>נתונים לתקציב</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>