force-app/main/default/objects/Budget_Param__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שנת תקציב</label>
    <referenceTo>Budget_Year__c</referenceTo>
    <relationshipName>Budget_Year</relationshipName>
    <type>Lookup</type>
</CustomField>