force-app/main/default/objects/Budget_Param__c/fields/calc_group__c.field-meta.xml
<CustomField>
    <fullName>calc_group__c</fullName>
    <formula>IF(ISBLANK(Product_Definition__r.Name ), TEXT(Internal_profit_center__c ),


TEXT(Internal_profit_center__c )&amp;&quot;-&quot;&amp; Product_Definition__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_calc group</label>
    <type>Text</type>
</CustomField>