force-app/main/default/objects/Budget_Param__c/fields/Internal_profit_center__c.field-meta.xml
<CustomField>
    <fullName>Internal_profit_center__c</fullName>
    <label>מרכז רווח פנימי</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internal_Profit_Center</valueSetName>
    </valueSet>
</CustomField>