force-app/main/default/objects/Budget_Param__c/fields/Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מוצר</label>
    <referenceTo>Novidea_HPC__Product_Def__c</referenceTo>
    <relationshipName>Budget_Calc</relationshipName>
    <type>Lookup</type>
</CustomField>