force-app/main/default/objects/Budget_Param__c/fields/Retention_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retention_Percent__c</fullName>
    <label>% שימור</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>