force-app/main/default/objects/Budget_Param__c/listViews/FY_2024.listView-meta.xml
<ListView>
    <fullName>FY_2024</fullName>
    <columns>Budget_Year__c</columns>
    <columns>NAME</columns>
    <columns>Internal_profit_center__c</columns>
    <columns>Product_Definition__c</columns>
    <columns>Retention_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Year__c</field>
        <operation>equals</operation>
        <value>FY-2024</value>
    </filters>
    <label>FY 2024</label>
</ListView>